test/expected/explain_a_re_i.out
explain [[reproducible]] int x
        ^
9: error: built-in type can not be "reproducible"
